# vibeblocks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  wrangler.toml
docs/: 00-index.md  01-introduction.md  02-getting-started.md  03-core-concepts.md  04-execution-runtime.md  05-failure-and-compensation.md  06-ai-dynamic-flows.md  07-quick-reference-api.md  08-glossary.md  09-strategic-evaluation.md  10-contributor-guide.md  11-production-best-practices.md
docs/source/: api_reference.rst  changelog-and-migrations.md  conf.py  core_concepts.md  documentation_structure_proposal.md  evaluation.md  getting_started.md  glossary.md  index.rst  start_here.md
docs/source/_templates/: layout.html
docs/source/concepts/: architecture.md  execution-model.md  failure-strategies.md  index.md  recommended-patterns.md
docs/source/development/: bug-management.md  index.md  issue-and-pr-templates.md  pull-request-workflow.md  setup.md
docs/source/guides/: ai-orchestration.md  context-serialization.md  cookbook.md  index.md  recipes.md  sync-vs-async-runner.md  tasks-processes-workflows.md
docs/source/onboarding/: execution-flow-diagrams.md  failure-retry-compensation.md  index.md  install-and-first-workflow.md  user-onboarding-workflow.md
docs/source/reference/: index.md  quick-reference.md
examples/: README.md  cookbook.py
llm/: ROLE.md
src/taskchain/: __init__.py
src/taskchain/components/: process.py  task.py  workflow.py
src/taskchain/core/: context.py  decorators.py  errors.py  executable.py  outcome.py
src/taskchain/policies/: failure.py  retry.py
src/taskchain/runtime/: runner.py
src/taskchain/utils/: inspection.py  serialization.py
src/vibeblocks/: __init__.py  vibeblocks.py
src/vibeblocks/components/: block.py  chain.py  flow.py
src/vibeblocks/core/: context.py  decorators.py  errors.py  executable.py  outcome.py
src/vibeblocks/policies/: failure.py
src/vibeblocks/runtime/: runner.py
src/vibeblocks/utils/: __init__.py  execution.py  schema.py
src/vibeflow/: __init__.py  vibeflow.py
src/vibeflow/components/: beat.py  chain.py  flow.py
src/vibeflow/core/: context.py  decorators.py  errors.py  executable.py  outcome.py
src/vibeflow/runtime/: runner.py
src/vibeflow/utils/: __init__.py  execution.py
tests/: test_async_detection_fix.py  test_components.py  test_context_security.py  test_context_serialization.py  test_convenience.py  test_core.py  test_integration.py  test_repro_bugs.py  test_retry_limits.py  test_retry_policy.py  test_timeouts.py  test_vibeblocks.py  test_vibeflow.py
